chore: update snapshots

--- a/providers.yaml
+++ b/providers.yaml
@@ -1,1 +1,58 @@
 providers:
+  - name: 'kingsuper.services'
+    snapshots:
+      - type: 'consensus-archive'
+        chain_id: 'celestia'
+        url: 'https://minioapi.kingsuper.services/celestia/celestia-app.tar.lz4'
+      - type: 'bridge-archive'
+        chain_id: 'celestia'
+        url: 'https://minioapi.kingsuper.services/celestia/celestia-bridge.tar.lz4'
+      - type: 'bridge-archive'
+        chain_id: 'mocha-4'
+        url: 'https://minioapi.kingsuper.services/celestia/mocha-4-bridge.tar.lz4'
+  - name: 'blackblocks.io'
+    snapshots:
+      - type: 'consensus-archive'
+        chain_id: 'celestia'
+        url: 'http://snapshots.blackblocks.io/mainnet/celestia/fullnode/archive/celestia_fullnode_archive_celestia_latest.tar.lz4'
+      - type: 'bridge-archive'
+        chain_id: 'celestia'
+        url: 'http://snapshots.blackblocks.io/mainnet/celestia/bridge/archive/celestia_bridge_archive_celestia_latest.tar.lz4'
+      - type: 'bridge-archive'
+        chain_id: 'mocha-4'
+        url: 'http://snapshots.blackblocks.io/testnet/celestia/bridge/archive/celestia_bridge_archive_mocha-4_latest.tar.lz4'
+  - name: 'kjnodes.com'
+    snapshots:
+      - type: 'consensus-pruned'
+        chain_id: 'celestia'
+        url: 'https://snapshots.kjnodes.com/celestia/snapshot_latest.tar.lz4'
+      - type: 'consensus-archive'
+        chain_id: 'celestia'
+        url: 'https://celestia-snapshots.kjnodes.com/celestia-archive/snapshot_latest.tar.lz4'
+      - type: 'consensus-pruned'
+        chain_id: 'mocha-4'
+        url: 'https://snapshots.kjnodes.com/celestia-testnet/snapshot_latest.tar.lz4'
+  - name: 'crouton.digital'
+    snapshots:
+      - type: 'consensus-pruned'
+        chain_id: 'celestia'
+        url: 'https://storage.crouton.digital/mainnet/celestia/snapshots/celestia_latest.tar.lz4'
+      - type: 'consensus-pruned'
+        chain_id: 'mocha-4'
+        url: 'https://storage.crouton.digital/testnet/celestia/snapshots/celestia_latest.tar.lz4'
+  - name: 'tienthuattoan.com'
+    snapshots:
+      - type: 'consensus-pruned'
+        chain_id: 'celestia'
+        url: 'https://snapshots.tienthuattoan.com/mainnet/celestia/celestia_latest.tar.lz4'
+      - type: 'consensus-pruned'
+        chain_id: 'mocha-4'
+        url: 'https://snapshots.tienthuattoan.com/testnet/celestia/celestia_latest.tar.lz4'
+  - name: 'noders.services'
+    snapshots:
+      - type: 'consensus-pruned'
+        chain_id: 'celestia'
+        url: 'https://config.noders.services/celestia/data.tar.lz4'
+      - type: 'consensus-pruned'
+        chain_id: 'mocha-4'
+        url: 'https://config-t.noders.services/celestia/data.tar.lz4'
