--- a/providers.yaml
+++ b/providers.yaml
@@ -64,3 +64,8 @@ providers:
       - type: 'consensus-pruned'
         chain_id: 'mocha-4'
         url: 'https://snapshots-testnet.stake-town.com/celestia/mocha-4_latest.tar.lz4'
+  - name: 'citizenweb3.com'
+    snapshots:
+      - type: 'consensus-pruned'
+        chain_id: 'celestia'
+        url: 'https://mainnet-snapshots.citizenweb3.com/celestia/snapshot_latest.tar.lz4'
